--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>HTML Forms Exercise</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -14,7 +14,7 @@
   <section>
     <h2>Contact Form</h2>
     <div class="group">
-      <div class="item-double">
+      <div class="item">
         <form action="https://formspree.io/xeqpqgro"
         method="post">
           <label for="user-name">Name:</label>
@@ -27,9 +27,6 @@
           <textarea id="user-message" name="message"></textarea>
           <button type="submit">Submit</button>
         </form>
-      </div>
-      <div class="item">
-        <img src="images/phone-and-coffee.jpg" class="contact-image">
       </div>
     </div>
    </section>
